--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/ldjam51.html"
+export_path="export/web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -176,3 +176,33 @@ privacy/removable_volumes_usage_description_localized={}
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
+
+[preset.3]
+
+name="Linux"
+platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="export/linux/ldjam51.x86_64"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_script=1
+binary_format/embed_pck=false
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/architecture="x86_64"
